# sim-run

./: .gitignore  BROCHURE.md  CONTRIBUTING.md  Cargo.toml  README.md  features.toml  release-plz.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
crates/sim-cli/: BROCHURE.md  Cargo.toml  README.md
crates/sim-cli-core/: BROCHURE.md  Cargo.toml  README.md
crates/sim-cli-core/src/: args.rs  codec_boot_tests.rs  crates_io.rs  git_registry.rs  handoff.rs  handoff_tests.rs  introspect.rs  introspect_tests.rs  lib.rs  load.rs  load_tests.rs  publish_tests.rs  receipt.rs  scenario_tests.rs  source.rs
crates/sim-cli-loaders/: BROCHURE.md  Cargo.toml  README.md
crates/sim-cli-loaders/src/: lib.rs  manifest.rs  native.rs  native_macro.rs  native_site.rs  shape.rs  wasm.rs
crates/sim-cli/src/: loader_boot.rs  main.rs  repl_boot_codec.rs
crates/sim-cli/tests/: basic.rs  native_dynamic_lisp.rs  native_dynamic_repl.rs  wasm_loader.rs
crates/sim-lib-index/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-index/src/: args.rs  dir.rs  envelope.rs  error.rs  lib.rs  query.rs  render.rs  route.rs  snapshot.rs  verb.rs
crates/sim-lib-index/src/snapshot/: index.sx
crates/sim-lib-repl/: BROCHURE.md  Cargo.toml  README.md
crates/sim-lib-repl/src/: entrypoint.rs  eval.rs  lib.rs
crates/sim-run/: Cargo.toml  README.md
crates/sim-run-core/: BROCHURE.md  Cargo.toml  README.md
crates/sim-run-core/src/: args.rs  boot.rs  bootloader.rs  codec_boot.rs  codec_boot_tests.rs  config.rs  config_report_tests.rs  config_site_tests.rs  config_tests.rs  crates_io.rs  device_host.rs  device_host_tests.rs  device_options.rs  device_options_tests.rs  envelope.rs  exit.rs  git_registry.rs  git_registry_tests.rs  handoff.rs  handoff_tests.rs  host.rs  introspect.rs  introspect_tests.rs  lib.rs  load.rs  load_tests.rs  publish_tests.rs  report.rs  scenario_tests.rs  source.rs
crates/sim-run-loaders/: BROCHURE.md  Cargo.toml  README.md
crates/sim-run-loaders/src/: binary_pack.rs  lib.rs  lisp_source.rs  manifest.rs  native.rs  native_class.rs  native_number.rs  reexport.rs  shared.rs  source_kind.rs  wasm.rs
crates/sim-run-loaders/src/binary_pack/: tests.rs
crates/sim-run-loaders/src/lisp_source/: compile.rs
crates/sim-run-loaders/src/native/: abi_guard_tests.rs  codec_proxy_tests.rs
crates/sim-run/src/: glasses.rs  glasses_args.rs  glasses_plan.rs  index.rs  loader_boot.rs  main.rs  watch.rs  watch_args.rs
crates/sim-run/tests/: basic.rs  config.rs  glasses.rs  native_dynamic_lisp.rs  native_dynamic_repl.rs  wasm_loader.rs  watch.rs
crates/sim-run/tests/support/: feature_build.rs  mod.rs  temp.rs
crates/sim-view-tty/: BROCHURE.md  Cargo.toml  README.md
crates/sim-view-tty/src/: entrypoint.rs  input.rs  lib.rs  render.rs  tests.rs
docs/agents/: card-index.json  cards.jsonl
docs/diagrams/src/: README.md
docs/humans/: README.md
recipes/: book.toml  tui-surface-keys.md
recipes/01-basics/: chapter.toml
recipes/01-basics/hello/: purpose.md  recipe.toml  setup.sh
recipes/01-basics/version/: purpose.md  recipe.toml  setup.sh
recipes/02-scenarios/: chapter.toml
recipes/02-scenarios/boot-lisp-eval/: purpose.md  recipe.toml  setup.sh
recipes/02-scenarios/bytes-lib/: purpose.md  recipe.toml  setup.sh
recipes/02-scenarios/config-cookbook-override/: purpose.md  recipe.toml  setup.sh
recipes/02-scenarios/config-effective/: purpose.md  recipe.toml  setup.sh
recipes/02-scenarios/config-status/: purpose.md  recipe.toml  setup.sh
recipes/02-scenarios/fake-crates-io/: purpose.md  recipe.toml  setup.sh
recipes/02-scenarios/host-verb/: purpose.md  recipe.toml  setup.sh
recipes/02-scenarios/index-examples/: purpose.md  recipe.toml  setup.sh
recipes/02-scenarios/index-find-codec/: purpose.md  recipe.toml  setup.sh
recipes/02-scenarios/index-list-languages/: purpose.md  recipe.toml  setup.sh
recipes/02-scenarios/index-trace-cli/: purpose.md  recipe.toml  setup.sh
recipes/02-scenarios/inspect-manifest/: purpose.md  recipe.toml  setup.sh
recipes/02-scenarios/loadable-site/: purpose.md  recipe.toml  setup.sh
recipes/02-scenarios/placement-report/: purpose.md  recipe.toml  setup.sh
recipes/02-scenarios/server-verb/: purpose.md  recipe.toml  setup.sh
recipes/publish-readiness/: chapter.toml
recipes/publish-readiness/package-list/: purpose.md  recipe.toml  setup.sh
scripts/: public-audit-allowlist.txt
xtask/src/: file_sizes.rs  index_check.rs  main.rs  recipe_check.rs
