[workspace]
resolver = "3"
members = [
  "crates/sim-run-core",
  "crates/sim-run-loaders",
  "crates/sim-lib-repl",
  "crates/sim-run",
  "crates/sim-view-tty",
  "xtask",
]
# The CLI stack -- sim-run (crates/sim-run) and sim-lib-repl -- depends on the
# `sim-nest` facade (imported as `sim`), which is now published on crates.io, so a
# standalone checkout resolves it. Both are full workspace members again.

[workspace.package]
edition = "2024"
license = "MPL-2.0"
repository = "https://github.com/sim-nest/sim-cli"
homepage = "https://github.com/sim-nest/sim-cli"

[workspace.lints.rust]
unsafe_code = "forbid"
