[package]
name = "sim-cli-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Core command entry API for the SIM bootloader."
readme = "README.md"
publish = true
repository = "https://github.com/sim-nest/sim-cli"
homepage = "https://github.com/sim-nest/sim-cli"

[dependencies]
sim-kernel = { version = "0.1.0" }
sim-lib-stream-host = { version = "0.1.0" }

[features]
default = []
registry = []

[lints]
workspace = true
