[package]
name = "sim-cli-loaders"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Feature-composable SIM bootloader loaders."
readme = "README.md"
publish = true
repository = "https://github.com/sim-nest/sim-cli"
homepage = "https://github.com/sim-nest/sim-cli"

[features]
default = []
dynamic-native = ["dep:libloading", "dep:sim-codec", "dep:sim-codec-binary"]
wasm = ["dep:sim-wasm-abi"]

[dependencies]
sim-codec = { version = "0.1.0", optional = true }
sim-codec-binary = { version = "0.1.0", optional = true }
sim-kernel = { version = "0.1.0" }
sim-wasm-abi = { version = "0.1.0", optional = true }

[dev-dependencies]
sim-wasm-abi = { version = "0.1.0" }

[target."cfg(not(target_arch = \"wasm32\"))".dependencies]
libloading = { version = "0.8", optional = true }

[lints.rust]
unsafe_code = "deny"
