[package]
name = "sim-lib-repl"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Loadable SIM command-line REPL library."
readme = "README.md"
publish = false
repository = "https://github.com/sim-nest/sim-cli"
homepage = "https://github.com/sim-nest/sim-cli"

[dependencies]
sim-cli-core = { version = "0.1.0", path = "../sim-cli-core" }
sim-codec = { version = "0.1.0" }
sim-kernel = { version = "0.1.0" }

[dev-dependencies]
sim = { version = "0.1.0", default-features = false, features = ["core", "shape", "codec-lisp", "numbers-prelude"] }

[lints]
workspace = true
