[package]
name = "sim-lib-repl"
version = "0.1.1"
edition.workspace = true
license.workspace = true
description = "Loadable SIM command-line REPL library."
readme = "README.md"
publish = true
repository = "https://github.com/sim-nest/sim-run"
homepage = "https://github.com/sim-nest/sim-run"

[dependencies]
sim-run-core = { version = "0.1.0", path = "../sim-run-core" }
sim-codec = { version = "0.1.0" }
sim-kernel = { version = "0.1.0" }
sim-value = { version = "0.1.0" }

[dev-dependencies]
sim = { package = "sim-nest", version = "0.1.0", default-features = false, features = ["core", "shape", "codec-lisp", "numbers-prelude"] }

[lints]
workspace = true
