[package]
name = "sim-lib-repl"
version = "0.1.1"
edition.workspace = true
license.workspace = true
description = "Loadable SIM command-line REPL library."
readme = "README.md"
publish = true
repository = "https://github.com/sim-nest/sim-run"
homepage = "https://github.com/sim-nest/sim-run"

[dependencies]
sim-run-core = { version = "0.1.0", path = "../sim-run-core" }
sim-codec = { version = "0.1.0" }
sim-kernel = { version = "0.1.0" }
sim-lib-core = { version = "0.1.2" }
sim-shape = { version = "0.1.0" }
sim-value = { version = "0.1.0" }

[dev-dependencies]
sim-codec-lisp = { version = "0.1.0" }
sim-lib-numbers-prelude = { version = "0.1.0" }
sim-test-support = { version = "0.1.0" }

[lints]
workspace = true
