[package]
name = "sim-run-core"
version = "0.1.3"
edition.workspace = true
license.workspace = true
description = "Core command entry API for the SIM bootloader."
readme = "README.md"
publish = true
repository = "https://github.com/sim-nest/sim-run"
homepage = "https://github.com/sim-nest/sim-run"

[dependencies]
sim-kernel = { version = "0.1.0" }
sim-lib-net-core = { version = "0.1.4" }
sim-lib-stream-host = { version = "0.1.0" }

[features]
default = []
registry = []

[lints]
workspace = true
