[package]
name = "sim-run"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "SIM bootloader command line."
readme = "README.md"
publish = true
repository = "https://github.com/sim-nest/sim-run"
homepage = "https://github.com/sim-nest/sim-run"

[[bin]]
name = "sim"
path = "src/main.rs"

[features]
# Compose the native dynamic-library loader into the `sim` build. The default
# binary stays a thin bootloader (no loader but the in-process host loader); this
# feature pulls in the low loader crate so `sim --load path:lib.so` works without
# the SDK umbrella.
dynamic-native = [
  "dep:sim-run-loaders",
  "sim-run-loaders/dynamic-native",
  "dep:sim-codec",
  "dep:sim-kernel",
  "dep:sim-lib-numbers-arith",
  "dep:sim-lib-repl",
]
registry = ["sim-run-core/registry"]
wasm = [
  "dep:sim-run-loaders",
  "sim-run-loaders/wasm",
  "dep:sim-kernel",
  "dep:sim-wasm-abi",
]

[dependencies]
sim-run-core = { version = "0.1.0", path = "../sim-run-core" }
sim-run-loaders = { version = "0.1.0", path = "../sim-run-loaders", optional = true, default-features = false }
sim-codec = { version = "0.1.0", optional = true }
sim-kernel = { version = "0.1.0", optional = true }
sim-lib-numbers-arith = { version = "0.1.0", optional = true }
sim-lib-repl = { version = "0.1.0", path = "../sim-lib-repl", optional = true }
sim-wasm-abi = { version = "0.1.0", optional = true }

[dev-dependencies]
sim-kernel = { version = "0.1", features = ["test-support"] }
wat = "1.245.1"

[lints]
workspace = true
