[package]
name = "sim-view-tty"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Loadable terminal (CLI/TUI) view/edit surface for SIM, projecting Scenes to text and reducing key input to Intents."
readme = "README.md"
publish = true
repository = "https://github.com/sim-nest/sim-cli"
homepage = "https://github.com/sim-nest/sim-cli"

[dependencies]
sim-kernel = { version = "0.1.0" }
sim-value = { version = "0.1.0" }
sim-lib-scene = { version = "0.1.0" }
sim-lib-intent = { version = "0.1.0" }
sim-lib-view = { version = "0.1.0" }

[lints]
workspace = true
